<resources>
    <string name="app_name">AIT Purity Test</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_message">Welcome to AIT Purity Test</string>
    <string name="register">Register</string>
    <string name="large_text">
        "The (Official) AIT Purity Test was inspired by the Rice Purity Test "
        "and serves as a segue from college life at US colleges to true study "
        "abroad life at the Acquincum Institute of Technology, Budapest. It’s "
        "a voluntary opportunity for the AIT student groups to bond, and for"
        "students to track the maturation of their experiences throughout their "
        "study abroad semester.\n\n"
        "Caution: This is not a bucket list. Completion of all items on this test does not make you cooler.\n\n"
    </string>
    <string-array name="surveyQuestions">
        <item>Did you go to one country other than Hungary?</item>
        <item>Did you visit at least two countries outside of Hungary?</item>
        <item>Did you visit at least three countries outside of Hungary?</item>
        <item>Did you visit at least four countries outside of Hungary?</item>
        <item>Did you visit five or more countries outside of Hungary?</item>
        <item>Skipped class to go traveling?</item>
        <item>Took an overnight bus?</item>
        <item>Went clubbing while traveling?</item>
        <item>Had a friend visit you in Budapest?</item>
        <item>Lost money for your spring break bookings?</item>
        <item>Went to the welcome bar party?</item>
        <item>Went to Instant?</item>
        <item>Went Szimpla?</item>
        <item>Went to the UV party?</item>
        <item>Went to the Karaoke night?</item>
        <item>Played a drinking game with AIT people?</item>
        <item>Had a slice of pizza from PizzaMe?</item>
        <item>Went home with someone you met at a club?</item>
        <item>Went home with someone from AIT after meeting up at a club?</item>
        <item>Got denied getting into a club?</item>
        <item>Played Avalon?</item>
        <item>Knew someone too well from “Never have I ever” or Paranoia?</item>
        <item>Picked up smoking while abroad?</item>
        <item>Went to Vienna for smoking related businesses?</item>
        <item>Got caught doing something illegal in Budapest?</item>
        <item>Didn’t get caught doing something illegal in Budapest?</item>
        <item>Kissed a random foreign person?</item>
        <item>Kissed another student from AIT?</item>
        <item>Kissed more than one student from AIT?</item>
        <item>Kissed another student studying abroad in Budapest?</item>
        <item>Went to AIT with your significant other?</item>
        <item>Broke up with your significant other while abroad?</item>
        <item>Said you were on a “break” so you could have fun abroad?</item>
        <item>Found your significant other at AIT?</item>
        <item>Lost your significant other at AIT?</item>
        <item>Tried palinka?</item>
        <item>Yelled at someone else to take a palinka shot with you?</item>
        <item> Bought yourself a handle of palinka?</item>
        <item>Tried tokaji?</item>
        <item>Tried unicum?</item>
        <item>Actually liked unicum?</item>
        <item>Got wine drunk from the winery visit?</item>
        <item>Went drinking on a weekday?</item>
        <item>Drank for one week straight?</item>
        <item>Drank for two weeks straight?</item>
        <item>Went to AIT hungover?</item>
        <item>Skipped class because you were hungover?</item>
        <item>Napped in the student lounge?</item>
        <item>Showered at AIT?</item>
        <item>Slept at AIT?</item>
        <item>FB messaged one of the AIT staff?</item>
        <item>Is FB friends with an AIT staff or professor?</item>
        <item>Is FB friends with more than one AIT staff or professor?</item>
        <item>Bolted to AIT because you woke up late?</item>
        <item>Used “sorry the bus came late” as an excuse for being late?</item>
        <item>Played the AIT guitar/piano during break?</item>
        <item>Tried to impress someone else by playing an instrument during break?</item>
        <item>Went to Szenchenzy?</item>
        <item>Went to the Turkish baths?</item>
        <item>Watched the sunset at the citadel?</item>
        <item>Went to Margaret Island?</item>
        <item>Drank on Margaret Island?</item>
        <item>Went thrift shopping?</item>
        <item>Went to an escape room?</item>
        <item>Visited the Parliament?</item>
        <item>Joined some activity/team with Hungarians?</item>
        <item>Spoken to a Hungarian in Hungarian?</item>
        <item>Went grocery shopping at Auchan next to AIT?</item>
        <item>Got a noise complaint in your apartment?</item>
        <item>Complained that your apartment was the worst?</item>
        <item>Took the M3 replacement bus?</item>
        <item>Got lost taking the M3 replacement bus?</item>
        <item>Got caught on public transport without a pass?</item>
        <item>Tried to imitate the Hungarian announcements on the metro?</item>
        <item>Tried turo rudi?</item>
        <item>Had Langosh?</item>
        <item>Had a gyro by the metro stops?</item>
        <item>Started actually liking paprika on everything?</item>
        <item>Cooked with someone from AIT not living with you?</item>
        <item>Studied at Madal Cafe?</item>
        <item>Spent too much money on coffee at Melbourne Cafe? (the cube cafe next to IBS)</item>
        <item>Knows what tessek means?</item>
        <item>Got the death stare from a Hungarian?</item>
        <item>Gave the death stare back to a Hungarian?</item>
        <item>Got yelled at in Hungarian, not understanding a word?</item>
        <item>Had a successful conversation with a local in Hungarian?</item>
        <item>Celebrated Busojaras?</item>
        <item>Was lowkey harassed by busos at Busojaras?</item>
        <item>Posted one abroad themed post on social media?</item>
        <item>Posted two abroad themed posts on social media?</item>
        <item>Posted three or more abroad themed posts on social media?</item>
        <item>Had an entire social media account dedicated to abroad content?</item>
        <item> Still receive advertisement in Hungarian on social media?</item>
        <item>Turned your video camera on for your online classes?</item>
        <item>Slid into someone’s Zoom direct message during class?</item>
        <item>Accidently sent the professor a zoom direct message?</item>
        <item>Dropped a course since we went online?</item>
        <item>Proclaimed love for Peter Ekler?</item>
        <item>Used the phrase “Is it Understandable”?</item>
        <item>Love AIT and wish you can go back soon!</item>>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="start_survey">Start Test</string>
    <string name="your_score">Your Score: %1$s</string>
    <string name="empty">empty</string>
    <string name="results">results</string>
    <string name="scores">Scores</string>
    <string name="zero">0</string>
    <string name="ten">10</string>
    <string name="twenty">20</string>
    <string name="thirty">30</string>
    <string name="forty">40</string>
    <string name="fifty">50</string>
    <string name="sixty">60</string>
    <string name="seventy">70</string>
    <string name="eighty">80</string>
    <string name="ninety">90</string>
    <string name="email_error">The email cannot be empty</string>
    <string name="pass_error">The password cannot be empty</string>
    <string name="press_start">Press start to begin the test</string>
    <string name="start">Start</string>
    <string name="finish">You\'ve finished!</string>
    <string name="end_test">End Test</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="UID_extra">UID</string>
</resources>
